# navigation

./: .gitignore  CMakeLists.txt  Readme.md  install.sh
models/: model.onnx
models/deep_learning_models/cfgs/model/: deep_dynamics_iac.yaml
models/deep_learning_models/model/: evaluate.py  models.py  train.py
models/deep_learning_models/tools/: csv_parser.py
src/libs/navigation_libs/: CMakeLists.txt
src/libs/navigation_libs/navigation_mpcc/: CMakeLists.txt
src/libs/navigation_libs/navigation_mpcc/include/: bounds.h  cost.h  hpipm_interface.h  model.h  mpc.h  track.h
src/libs/navigation_libs/navigation_mpcc/src/: hpipm_interface.cpp
src/libs/navigation_libs/navigation_onxx_runtime_prediction_model/: CMakeLists.txt
src/libs/navigation_libs/navigation_onxx_runtime_prediction_model/include/: navigation_onxx_runtime_prediction_model.hpp
src/libs/navigation_libs/navigation_onxx_runtime_prediction_model/src/: navigation_onxx_runtime_prediction_model.cpp  test.cpp
src/ros_apps/: setup.bash
src/ros_apps/src/navigation_mpcc/: CMakeLists.txt  package.xml
src/ros_apps/src/navigation_mpcc/include/navigation_mpcc/: navigation_mpcc_node.hpp
src/ros_apps/src/navigation_mpcc/src/: main.cpp  navigation_mpcc_node.cpp
src/ros_apps/src/navigation_prediction_model/: CMakeLists.txt
src/ros_apps/src/navigation_prediction_model/include/navigation_prediction_model/: navigation_prediction_model_node.hpp
src/ros_apps/src/navigation_prediction_model/src/: main.cpp  navigation_prediction_model_node.cpp
src/ros_apps/src/nonlinear_mpc_casadi/scripts/: nonlinear_mpc.py  nonlinear_mpc_node.py
srcipts/: convert_csv_to_model_required_data.py  post_processing_data_collector.py  simulator_data_collector.py
