message("############# navigation Libs Cmake ##################")

##################### Build navigation_onxx_runtime_prediction_model Lib ##########################
add_subdirectory(navigation_onxx_runtime_prediction_model)

##################### Build navigation_mppi Lib ##########################
add_subdirectory(navigation_mpcc)